# 5008

a1/: README.md  fancy_rectangle.c  rectangle.c  warmup.c
a2/: README.md  a2.c  a2.h  a2_test.c
a3/: Makefile  README.md  deque.c  deque_clean.c  doubly.c  node.c  node.h
a4and5v2/: CMakeLists.txt  LinkedList.c  LinkedList_easy.h  Main.c  Makefile  README.md  test_linkedlist.cc
a4and5v2/Archived/: main  step9etc_a4_LinkedList.c  test_linkedlist.cc
a6v2/: LinkedList.c  LinkedList_easy.h  Main.c  Makefile  README.md  Sort.c  Sort.h  test_linkedlist.cc
a7v2/: README.md  READMEv2.md  shell.c  shellv2.c
a8v2/: Hashtable.c  Hashtable_easy.h  LinkedList.c  LinkedList_easy.h  Makefile  README.md  main.c  test_hashtable.cc
